@@ -1,8 +1,13 @@
-/* $Id: changelog,v 1.1711 2001-09-30 15:33:16 sandervl Exp $ */
+/* $Id: changelog,v 1.1712 2001-09-30 22:25:43 sandervl Exp $ */
 
  2001-09-30: Sander van Leeuwen <sandervl@xs4all.nl>
     - INCLUDE:  o Hook constants added to winconst.h
                   (adding them to winuser.h only completely breaks Odin)
+    - DDRAW:    o Implemented IDirectDrawClipper class for windowed DirectDraw
+                  (only works if app uses clipping info for manual blitting;
+                   IDirectSurface blitting methods need to be updated to
+                   take clipping into account)
+    - USER32:   o Added export to registery visible region change callback
 
  2001-09-30: knut st. osmundsen <kosmunds@csc.com>
     - Makefiles:
